<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/the_title_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date" />
            <DatePicker android:id="@+id/date_picker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:background="@color/text_color" android:layout_width="2.0dip" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/the_title_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time" />
            <TimePicker android:id="@+id/time_picker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/date_time_confirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_confirm" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/date_time_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>