<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_setting_bg">

        <LinearLayout
            android:id="@+id/ipAddress_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            android:background="@drawable/ic_color_bg_red"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ipAddress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_webserver_ipaddress_input"
                android:textColor="#000"></TextView>

            <EditText
                android:id="@+id/ipAddress_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/setting_webserver_ipaddress_hint"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/port_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ipAddress_setting"
            android:layout_marginTop="3dp"
            android:background="@drawable/ic_color_bg_red"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/port_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_webserver_port_input"
                android:textColor="#000"></TextView>

            <EditText
                android:id="@+id/port_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/setting_webserver_port_hint"></EditText>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>